<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="4dp"
    tools:context="com.akhilsukh01.earthquakepreparednessproject.Checklist">

            <androidx.cardview.widget.CardView
                android:id="@+id/mChecklist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/CardHome"
                app:cardBackgroundColor="@color/color2"
                app:cardCornerRadius="12dp" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Checklist"
                        style="@style/SubBold"/>

                    <TextView
                        android:id="@+id/period"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginBottom="10dp"
                        android:text="○  Flashlights and spare batteries"
                        android:textColor="@color/colortext"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/period2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginBottom="10dp"
                        android:text="○  Food and Water"
                        android:textColor="@color/colortext"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/period3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginBottom="10dp"
                        android:text="○  Fire extinguishers"
                        android:textColor="@color/colortext"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/period4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginBottom="10dp"
                        android:text="○  First aid kit and manual"
                        android:textColor="@color/colortext"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/period5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginBottom="10dp"
                        android:text="○  Important papers and cash"
                        android:textColor="@color/colortext"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/period6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginBottom="10dp"
                        android:text="○  Pet needs"
                        android:textColor="@color/colortext"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/period7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginBottom="18dp"
                        android:text="○  Portable, battery-powered radio"
                        android:textColor="@color/colortext"
                        android:textSize="15sp" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/mLinks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/CardHome"
            app:cardBackgroundColor="@color/color2"
            app:cardCornerRadius="12dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Resources"
                style="@style/SubBold"/>

            <TextView
                android:id="@+id/linkJimdo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:text="@string/linkJimdo"
                android:textAlignment="textStart"
                android:textColor="@color/colortext"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/linkRed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="6dp"
                android:text="@string/linkRed"
                android:textAlignment="textStart"
                android:textColor="@color/colortext"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/linkFema"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="6dp"
                android:text="@string/linkFema"
                android:textAlignment="textStart"
                android:textColor="@color/colortext"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/linkNatGeo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="6dp"
                android:text="@string/linkNatGeo"
                android:textAlignment="textStart"
                android:textColor="@color/colortext"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/linkCountry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="14dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="6dp"
                android:text="@string/linkCountry"
                android:textColor="@color/colortext"
                android:textSize="15dp" />

        </LinearLayout>

        </androidx.cardview.widget.CardView>
</LinearLayout>
