<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.akhilsukh01.earthquakepreparednessproject.during">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingLeft="14dp"
                    android:paddingRight="14dp"
                    app:cardBackgroundColor="@color/color2"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="12dp"
                    app:cardCornerRadius="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView30"
                            android:layout_width="match_parent"
                            android:layout_height="21dp"
                            android:layout_marginBottom="8dp"
                            android:layout_marginTop="12dp"
                            android:gravity="center"
                            android:text="Staying Safe After an Earthquake"
                            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                            android:textColor="@color/colortext"
                            android:textSize="16dp"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_bias="0.093" />

                        <TextView
                            android:id="@+id/textView15"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="6dp"
                            android:layout_marginTop="10dp"
                            android:paddingLeft="28dp"
                            android:text="If you do nothing else:"
                            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                            android:textColor="@color/colortext"
                            android:textSize="14dp"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_bias="0.2" />

                        <TextView
                            android:id="@+id/textView21"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            android:layout_marginTop="0dp"
                            android:paddingLeft="24dp"
                            android:paddingRight="24dp"
                            android:text="@string/afterpara1"
                            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                            android:textColor="@color/colortext"
                            android:textSize="13dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_bias="0.114" />

                        <TextView
                            android:id="@+id/textView33"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="6dp"
                            android:layout_marginTop="10dp"
                            android:paddingLeft="28dp"
                            android:text="Caring for yourself and loved ones"
                            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                            android:textColor="@color/colortext"
                            android:textSize="14dp"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_bias="0.2" />

                        <TextView
                            android:id="@+id/textView38"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            android:layout_marginTop="0dp"
                            android:paddingLeft="24dp"
                            android:paddingRight="24dp"
                            android:text="@string/afterpara2"
                            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                            android:textColor="@color/colortext"
                            android:textSize="13dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_bias="0.114" />

                        <TextView
                            android:id="@+id/textView25"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="6dp"
                            android:layout_marginTop="10dp"
                            android:paddingLeft="28dp"
                            android:text="Returning home safely"
                            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                            android:textColor="@color/colortext"
                            android:textSize="14dp"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_bias="0.2" />

                        <TextView
                            android:id="@+id/textView31"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            android:layout_marginTop="0dp"
                            android:paddingLeft="24dp"
                            android:paddingRight="24dp"
                            android:text="@string/afterpara3"
                            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                            android:textColor="@color/colortext"
                            android:textSize="13dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_bias="0.114" />

                        <TextView
                            android:id="@+id/textView27"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="6dp"
                            android:layout_marginTop="10dp"
                            android:paddingLeft="28dp"
                            android:text="Cleaning and repairing your home"
                            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                            android:textColor="@color/colortext"
                            android:textSize="14dp"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_bias="0.2" />

                        <TextView
                            android:id="@+id/textView37"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            android:layout_marginTop="0dp"
                            android:paddingLeft="24dp"
                            android:paddingRight="24dp"
                            android:text="@string/afterpara4"
                            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                            android:textColor="@color/colortext"
                            android:textSize="13dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_bias="0.114" />

                        <TextView
                            android:id="@+id/textView11"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="6dp"
                            android:layout_marginTop="10dp"
                            android:paddingLeft="28dp"
                            android:text="Ask a professional to:"
                            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                            android:textColor="@color/colortext"
                            android:textSize="14dp"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_bias="0.2" />

                        <TextView
                            android:id="@+id/textView23"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="4dp"
                            android:layout_marginTop="0dp"
                            android:paddingLeft="24dp"
                            android:paddingRight="24dp"
                            android:text="@string/afterpara5"
                            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                            android:textColor="@color/colortext"
                            android:textSize="13dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_bias="0.114" />

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="114dp"
                            android:layout_marginBottom="15dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginHorizontal="10dp"
                            android:src="@drawable/after1" />
                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="50dp"
                    android:text="" />

            </LinearLayout>

        </ScrollView>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
